[package]
name = "inertpad"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
clap = { version = "4.3.21", features = ["derive"] }
env_logger = "0.10.0"
evdev = "0.12.1"
log = "0.4.19"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
